# aim_ml

./: .gitattributes  .gitignore  pyproject.toml
1/: 01.HW.NumPy.ipynb
10/: baseline_1_polars.ipynb  baseline_1_polars_feature_optimized.ipynb  baseline_1_polars_feature_ultra_optimized.ipynb  baseline_1_polars_optimized.ipynb  cluster_compare.py  data_preparation.py  drop.json  main.ipynb  test.ipynb  utils.py  utils2.py  validation_check.py
11/: HW5_experimental.ipynb  tests.ipynb
2/: 02.HW.Pandas_MPL_Seaborn.ipynb
3/: hw3.ipynb
4/: main.ipynb  main.py
5/: task(1).ipynb
6/: 1.py  2.py  3.py  fix.py  main.ipynb  test.ipynb
7/: 07_HW_DimRed.ipynb
8/: 01.HW.Decision_tree_Random_forest.ipynb
8/sem_dt_rf/decision_tree/: criterio.py  decision_tree.py
8/sem_dt_rf/random_forest/: sampler.py
9/: hw9.ipynb
