[project]
name = "ai"
version = "0.1.0"
description = ""
authors = [
    {name = "LumbaBalumba",email = "vlad.lazar.ik528@yandex.ru"}
]
requires-python = ">=3.11"
dependencies = [
    "scikit-learn (>=1.7.2,<2.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "filterpy (>=1.4.5,<2.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "tqdm-joblib (>=0.0.5,<0.0.6)",
    "iprogress (>=0.4,<0.5)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "graphviz (>=0.21,<0.22)",
    "optuna (>=4.5.0,<5.0.0)",
    "hyperopt (>=0.2.7,<0.3.0)",
    "catboost (>=1.2.8,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=6.30.1,<7.0.0)"
]
