[project]
name = "ai"
version = "0.1.0"
description = ""
authors = [
    {name = "LumbaBalumba",email = "vlad.lazar.ik528@yandex.ru"}
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "scikit-learn (>=1.7.2,<2.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "filterpy (>=1.4.5,<2.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "tqdm-joblib (>=0.0.5,<0.0.6)",
    "iprogress (>=0.4,<0.5)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "graphviz (>=0.21,<0.22)",
    "optuna (>=4.5.0,<5.0.0)",
    "hyperopt (>=0.2.7,<0.3.0)",
    "catboost (>=1.2.8,<2.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "polars (>=1.35.2,<2.0.0)",
    "rapidfuzz (>=3.14.3,<4.0.0)",
    "faiss-gpu-cu12 (>=1.13.0,<2.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "vectorizers (>=0.2.2,<0.3.0)",
    "symspellpy (>=6.9.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=6.30.1,<7.0.0)"
]
