[project]
name = "ai"
version = "0.1.0"
description = ""
authors = [
    {name = "LumbaBalumba",email = "vlad.lazar.ik528@yandex.ru"}
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "scikit-learn (>=1.7.2,<2.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "filterpy (>=1.4.5,<2.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "tqdm-joblib (>=0.0.5,<0.0.6)",
    "iprogress (>=0.4,<0.5)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "graphviz (>=0.21,<0.22)",
    "optuna (>=4.5.0,<5.0.0)",
    "hyperopt (>=0.2.7,<0.3.0)",
    "catboost (>=1.2.8,<2.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "polars (>=1.35.2,<2.0.0)",
    "rapidfuzz (>=3.14.3,<4.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "vectorizers (>=0.2.2,<0.3.0)",
    "symspellpy (>=6.9.0,<7.0.0)",
    "umap-learn (>=0.5.9.post2,<0.6.0)",
    "splink (>=4.0.11,<5.0.0)",
    "faiss-cpu (>=1.13.1,<2.0.0)",
    "gdown (>=5.2.0,<6.0.0)",
    "nmslib (>=2.1.2,<3.0.0)",
    "datashader (>=0.18.2,<0.19.0)",
    "bokeh (>=3.8.1,<4.0.0)",
    "holoviews (>=1.22.1,<2.0.0)",
    "scikit-image (>=0.26.0,<0.27.0)",
    "colorcet (>=3.1.0,<4.0.0)",
    "plotly (>=6.5.0,<7.0.0)",
    "ipywidgets (>=8.1.8,<9.0.0)",
    "xgboost (>=3.1.3,<4.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "hdbscan (>=0.8.41,<0.9.0)",
    "shap (>=0.51.0,<0.52.0)",
    "py-boost (>=0.5.2,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=6.30.1,<7.0.0)"
]
